Create Progress Bar Functionality when fetching data

--- a/app/src/main/res/layout/activity_lecturer_login.xml
+++ b/app/src/main/res/layout/activity_lecturer_login.xml
@@ -88,4 +88,14 @@
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/container"
+        android:indeterminateTint="@color/red"
+        android:visibility="gone"
+        android:layout_centerHorizontal="true"/>
+
 </RelativeLayout>
