--- a/app/src/main/res/layout/activity_student_login.xml
+++ b/app/src/main/res/layout/activity_student_login.xml
@@ -87,5 +87,13 @@
                 android:text="Login" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
-
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/container"
+        android:indeterminateTint="@color/red"
+        android:layout_centerHorizontal="true"
+        android:visibility="gone" />
 </RelativeLayout>
