LecturerMainPage and LecturerBooking

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="red">#C33C54</color>
     <color name="blue">#37718E</color>
     <color name="grey">#C4C4C4</color>
+    <color name="light_blue">#8EE3EF</color>
 </resources>
