Fix double click on Date and Time Picker

--- a/app/src/main/res/layout/activity_upload_schedule.xml
+++ b/app/src/main/res/layout/activity_upload_schedule.xml
@@ -9,7 +9,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         app:cardElevation="10dp"
         android:layout_margin="10dp"
         app:cardBackgroundColor="@color/white"
@@ -19,7 +19,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
             <TextView
@@ -34,9 +34,10 @@
                 android:textColor="@color/white"
                 android:textSize="20dp" />
 
-            <LinearLayout
+            <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
-                android:layout_height="495dp"
+                android:layout_height="0dp"
+                android:layout_weight="1"
                 android:background="@color/blue"
                 android:orientation="vertical"
                 android:paddingHorizontal="20dp"
@@ -73,12 +74,12 @@
                     android:inputType="number|textPassword"
                     android:textColor="@color/white" />
 
-            </LinearLayout>
+            </androidx.appcompat.widget.LinearLayoutCompat>
 
             <Button
                 android:id="@+id/upload_Schedule"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:backgroundTint="@color/grey"
                 android:insetTop="0dp"
                 android:insetBottom="0dp"
