Resolve Refactor Directory #7

--- a/app/src/main/res/layout/activity_lecturer_main_page.xml
+++ b/app/src/main/res/layout/activity_lecturer_main_page.xml
@@ -5,7 +5,7 @@
     android:id="@+id/activity_lecturer_main_page"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LecturerMainPage"
+    tools:context=".LecturerUser.LecturerMainPage"
     android:forceHasOverlappingRendering="true">
 
     <androidx.cardview.widget.CardView
