--- a/app/src/main/res/layout/activity_make_appointment.xml
+++ b/app/src/main/res/layout/activity_make_appointment.xml
@@ -5,7 +5,7 @@
     android:id="@+id/activity_make_appointment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MakeAppointment"
+    tools:context=".StudentUser.MakeAppointment"
     android:forceHasOverlappingRendering="true">
 
     <androidx.cardview.widget.CardView
