--- a/app/src/main/res/layout/activity_manage_schedule.xml
+++ b/app/src/main/res/layout/activity_manage_schedule.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="fill_parent"
     android:id="@+id/parentContainer"
-    tools:context=".ManageSchedule">
+    tools:context=".LecturerUser.ManageSchedule">
     <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/schedules_container"
         android:layout_width="match_parent"
