--- a/app/src/main/res/layout/activity_student_upcoming.xml
+++ b/app/src/main/res/layout/activity_student_upcoming.xml
@@ -5,7 +5,7 @@
     android:id="@+id/activity_student_upcoming"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".StudentUpcoming"
+    tools:context=".StudentUser.StudentUpcoming"
     android:forceHasOverlappingRendering="true">
 
     <androidx.cardview.widget.CardView
